# pinnaple-microshop

./: .env.template  .gitignore  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_12_23_2010-d4cb107787da_delete_uuid_column_in_users_table.py  2024_12_23_2019-18aec1dfe773_delete_uuid_column_in_users_table.py
api/: __init__.py
api/authentication/: __init__.py  authentication.py  roles_api.py  users_api.py
api/v1/: __init__.py
api/v1/market/: brand_api.py  category_api.py
backend/: .env.template  .gitignore  Dockerfile  authorization.py  docker-compose.yaml  main.py  pyproject.toml  request.py
backend/alembic/versions/: 2024_09_15_1443-2570a63b82c2_make_models.py  2024_12_18_0108-1dba9a136ea3_add_user_and_user_role_table.py  (+3 more)
backend/authentication/: __init__.py  exceptions.py  raw.py  schemas.py
backend/backends/: authorization.py
backend/bot/: __init__.py  bot.py
backend/core/: __init__.py  db_helper.py  message.json  settings.py
backend/models/: __init__.py  basemodel.py  brand.py  category.py  product.py
core/: db_helper.py  settings.py
core/utils/: __init__.py  jwt_decode.py  salt_password.py  validate_password.py
crud/market/: __init__.py  brand_crud.py
crud/users/: users_crud.py
frontend/: package.json
frontend/src/: App.jsx  CarouselComponent.jsx  Category.jsx  FormProduct.jsx  Header.jsx  Header.module.scss  Product.jsx  index.css  main.jsx
models/: basemodel.py  brand.py  category.py
models/users/: __init__.py  user.py
schemas/market/: __init__.py  brand_schema.py  products_schema.py  user_schema.py
(+38 files in other folders)
