[tool.poetry]
name = "pinnaple"
version = "0.1.0"
description = ""
authors = ["me"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.114.2"}
pydantic = {extras = ["email"], version = "^2.9.1"}
sqlalchemy = {extras = ["asycio"], version = "^2.0.34"}
pydantic-settings = "^2.5.2"
alembic = "^1.13.2"
black = "^24.8.0"
aiosqlite = "^0.20.0"
asyncpg = "^0.29.0"
greenlet = "^3.1.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^14.0.0"}
bcrypt = "^4.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
